# XestCore

./: CMakeLists.txt  Main.cpp  README.md  XestCore.sln
CLIENT/: CLIENT.vcxproj  CLIENT.vcxproj.filters  Main.cpp
Common/: CMakeLists.txt
Common/Configuration/: CMakeLists.txt  Config.cpp
Common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.h  CMakeLists.txt  Log.cpp  Log.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h
Common/Utilities/: ByteConvert.h  CMakeLists.txt  MessageBuffer.h  Util.cpp  Util.h
Configuration/: CMakeLists.txt  Config.cpp  Config.h
Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  CMakeLists.txt  Log.cpp  Log.h
R.O.C.Kill/: Command.hpp  CompilerDefs.h  DBUtil.hpp  Desktop.cpp  Desktop.h  GameCard.hpp  Main.cpp  MsgQueue.hpp  ObjectCard.hpp  ParserX.hpp  Player.cpp  Player.h  PowerCard.hpp  R.O.C.Kill.vcxproj  R.O.C.Kill.vcxproj.filters  Server.hpp  Session.cpp  Session.h  Session.hpp  SessionMgr.hpp  Socket.h  XString.h  XString.hpp  XestCore.rc  build.sh  resource.h  stdxafx.h
Server/: CMakeLists.txt  Message.cpp  Message.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
Server/proto/Client/: rpc_types.pb.cc  rpc_types.pb.h
Server/proto/Client/global_extensions/: field_options.pb.cc  method_options.pb.cc  service_options.pb.cc
Service/: CMakeLists.txt  Service.h  ServiceDispatcher.cpp  ServiceDispatcher.h
Shared/: AsyncAcceptor.h  CMakeLists.txt  NetworkThread.h  Socket.h  SocketMgr.h  SslSocket.h
XestCore/: AsyncAcceptor.h  Command.hpp  CompilerDefs.h  Define.h  Desktop.cpp  Desktop.h  Error.cpp  Error.h  GameCard.hpp  IdentityCard.hpp  Log.h  Main.cpp  MessageBuffer.h  NetworkThread.h  ObjectCard.hpp  ParserX.hpp  Player.cpp  Player.h  R.O.C.Kill.vcxproj.filters  RoleCard.hpp  Server.hpp  Session.h  SessionMgr.h  SessionMgr.hpp  Socket.h  SocketMgr.h  Util.hpp  XException.h  XString.hpp  XestCore.vcxproj  XestCore.vcxproj.filters  stdxafx.h
dep/: CMakeLists.txt
dep/cppformat/: CMakeLists.txt
dep/protobuf/: CMakeLists.txt
